Updated all component navbars

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <!-- main content container -->
     <router-outlet></router-outlet>
 </body>
-<div id="footer">
+<div>
     <app-footer></app-footer>
 </div>
 
