--- a/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
+++ b/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
@@ -1,6 +1,8 @@
-<div class="coffee-chat-navbar">
-    <app-navbar></app-navbar>
-    <app-coffee-chat-navbar></app-coffee-chat-navbar>
+<div>
+    <app-navbar style="z-index: 9999;"></app-navbar>
+</div>
+<div class="sticky-top">
+    <app-coffee-chat-navbar style="z-index: 1;"></app-coffee-chat-navbar>
 </div>
  <!-- Page Content Holder -->
  <div id="content">
