--- a/src/app/journal-prompt/journal-prompt.component.html
+++ b/src/app/journal-prompt/journal-prompt.component.html
@@ -36,18 +36,16 @@
                     <div class="col-8">
                         <textarea rows="2" class="reg-font text-center" style="margin-top: 50px; font-size: 25px;" readonly>{{title.text}}</textarea>
                         <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; text-align: center;">July 08, 2020</div>
-                        <div class="form-group">
+                        <div class="form-group" style="align-content: center;">
                             <textarea rows="20" class="notes" formControlName="textEntry" placeholder="Begin entry here..."></textarea>
+                            <button [disabled]="loading" class="btn btn-primary">
+                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                Submit
+                            </button>
+                            <a routerLink="/journal" class="btn btn-link">Back to Journaling Options</a>
                         </div>
                     </div>
                     <div class="col-2"></div>
-                </div>
-                <div class="form-group">
-                    <button [disabled]="loading" class="btn btn-primary">
-                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                        Submit
-                    </button>
-                    <a routerLink="/journal" class="btn btn-link">Back to Journaling Options</a>
                 </div>
             </div>  
         </form>
