--- a/src/app/journal/journal.component.css
+++ b/src/app/journal/journal.component.css
@@ -98,7 +98,93 @@ html,body{
     width:100%;
     transition:800ms ease all;
   }
+
+
   
+
+  div[class*=box] {
+    height: 150px;
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.box-1 { background-color: #d8e4e7; }
+.box-2 { background-color: #3C3C3C; }
+.box-3 { background-color: #66A182; }
+
+.btn {
+    line-height: 50px;
+    height: 150px;
+    text-align: center;
+    padding-top: 10%;
+    width: 100%;
+    cursor: pointer;
+    font-family: 'Montserrat';
+}
+
+/* 
+========================
+      BUTTON ONE
+========================
+*/
+.btn-one {
+    color: grey;
+    transition: all 0.3s;
+    position: relative;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-top-color: grey;
+    border-bottom-color: rgb(167, 167, 167);
+}
+.btn-one span {
+    transition: all 0.3s;
+}
+.btn-one::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-top-color: grey;
+    border-bottom-color: grey;
+    transform: scale(0.1, 1);
+}
+.btn-one:hover span {
+    letter-spacing: 2px;
+}
+.btn-one:hover::before {
+    opacity: 1; 
+    transform: scale(1, 1); 
+}
+.btn-one::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    z-index: 1;
+    transition: all 0.3s;
+    background-color: rgba(255,255,255,0.1);
+}
+.btn-one:hover::after {
+    opacity: 0; 
+    transform: scale(0.1, 1);
+}
+
   
 
     
