--- a/src/app/journal/journal.component.html
+++ b/src/app/journal/journal.component.html
@@ -20,17 +20,35 @@
 </head>
 <body>
     <div>
-        <app-navbar></app-navbar>
-        <app-journal-navbar></app-journal-navbar>
+        <app-navbar style="z-index: 9999;"></app-navbar>
+    </div>
+    <div class="sticky-top">
+        <app-journal-navbar style="z-index: 1;"></app-journal-navbar>
     </div>
 
-    <div class="journal" id="content">
-        <!--Button-->
-        <button class="button-choice reg-font text-white" style="margin:3rem" routerLink="/journal-free-write">Free Write</button>
-        <button class="button-choice reg-font text-white" style="margin:3rem" routerLink="/journal-prompt">Respond to a Prompt</button>
-    </div>
-        <app-footer></app-footer>
-    
+    <div class="journal container-fluid" id="content">
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-4">
+                <!--Button-->
+                <div class="box-1">
+                    <div class="btn btn-one">
+                    <span>Free Write</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+            <div class="col-4">
+                <!--Button-->
+                <div class="box-1">
+                    <div class="btn btn-one">
+                    <span>Respond to a Prompt</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1"></div>
+        </div>
+    </div>    
 
     
 
