--- a/src/app/mood-chosen/mood-chosen.component.html
+++ b/src/app/mood-chosen/mood-chosen.component.html
@@ -1,26 +1,10 @@
+<div>
+    <app-navbar style="z-index: 9999;"></app-navbar>
+</div>
 <div class="sticky-top">
-        <app-navbar></app-navbar>
-    </div>
-    
-    <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
-        <div class="container-fluid">
-            <a class="navbar-brand fancy-font" style="font-size: 45px;">Mood Tracker</a>
-            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-align-justify"></i>
-            </button>
-    
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link reg-font hoverable" href="mood-tracker-weekly-charts">Weekly Graph</a>
-                    </li>
-                    <li>
-                        <a class="nav-link reg-font hoverable" href="mood-tracker-monthly-charts">Monthly Graph</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <app-mood-tracker-navbar style="z-index: 1;"></app-mood-tracker-navbar>
+</div>
+
     <div class="background-mood" id="content">
             <div id="first">
                 <div id="second">
@@ -36,4 +20,3 @@
                 </div>
             </div>
          </div>
-        <app-footer></app-footer>
