--- a/src/app/mood-tracker-navbar/mood-tracker-navbar.component.html
+++ b/src/app/mood-tracker-navbar/mood-tracker-navbar.component.html
@@ -1,19 +1,21 @@
 
-          <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
-            <div class="container-fluid">
-                <a class="navbar-brand fancy-font" style="font-size: 45px;">Mood Tracker</a>
-                <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-align-justify"></i>
+          <nav class="navbar navbar-expand-lg" style="background-color: #E2b8af;">
+            <div class="container-fluid"> 
+                <a class="navbar-brand fancy-font text-grey" style="font-size: 40px;">Mood Tracker</a>
+                <a class="reg-font text-grey" style="font-size: 30">>> {{currentPage}}</a>
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent">
+                    <span class="fa fa-bars" style="color: white"></span>
                 </button>
-            </div>
-                <div>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link reg-font hoverable" href="mood-tracker-weekly-charts">Weekly Graph</a>
+                            <li class="nav-item">
+                                <a class="nav-link reg-font text-grey hoverable" href="mood-tracker-weekly-charts">Weekly Graph</a>
                             </li>
-                            <li>
-                                <a class="nav-link reg-font hoverable" href="mood-tracker-monthly-charts">Monthly Graph</a>
+                            <li class="nav-item">
+                                <a class="nav-link reg-font text-grey hoverable" href="mood-tracker-monthly-charts">Monthly Graph</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link reg-font text-grey hoverable" href="mood-tracker">Update Mood</a>
                             </li>
                         </ul>
                     </div>
