--- a/src/app/journal-published/journal-published.component.html
+++ b/src/app/journal-published/journal-published.component.html
@@ -27,7 +27,45 @@
     </div>
         <!-- Page Content Holder -->
         <div class="journal" id="content">
+            <div id="content">
+                <div class="col-sm-6 offset-sm-3">
+                    <div class="md-form md-outline">
+                        <alert></alert>
+                        <label for="default-picker">What Day's Data Do You Want To Load?</label>
         
+                      </div>
+                </div>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+            <div class="col-sm-6 offset-sm-3">
+                <input type="date" id="default-picker" formControlName="selectedDate" class="form-control" placeholder="Select time">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-1 offset-sm-8">
+                <button [disabled]="loading" class="btn btn-primary">
+                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                Find
+            </button>
+            </div>
+        </div>
+        </form>
+        <div id="content">
+        <div class = "" *ngFor="let user of validJournal" >
+        
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 offset-md-3 journal-padding">
+                    <h2>Prompt: {{user.title}}</h2>
+                    
+                    <p>Entry: {{user.text}}</p>
+                    <div class="line"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+            </div>
         </div>
     <app-footer></app-footer>
 
