--- a/src/app/mood-chosen/mood-chosen.component.html
+++ b/src/app/mood-chosen/mood-chosen.component.html
@@ -2,7 +2,7 @@
         <app-navbar></app-navbar>
     </div>
     
-    <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
+    <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #E2B8AF; border-bottom: 3px solid;">
         <div class="container-fluid">
             <a class="navbar-brand fancy-font" style="font-size: 45px;">Mood Tracker</a>
             <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,11 +28,11 @@
                 </div>
             <div class="resource-container">
                 <div class="resource-item">
-                        <button id="anxious" value="anxious" name="button" routerLink="/mood-chosen"></button> <hr>Read </div>
+                        <button id="read" value="anxious" name="button" routerLink="/mood-chosen"></button> <hr>Read </div>
                 <div class="resource-item">
-                    <button id="excited" value="excited" name="button" routerLink="/mood-chosen"></button><hr> Watch </div>
+                    <button id="watch" value="excited" name="button" routerLink="/mood-chosen"></button><hr> Watch </div>
                 <div class="resource-item">
-                    <button id="confused" value="confused" name="button" routerLink="/mood-chosen"></button><hr>Do </div>
+                    <button id="do" value="confused" name="button" routerLink="/mood-chosen"></button><hr>Do </div>
                 </div>
             </div>
          </div>
