--- a/src/app/mood-tracker/mood-tracker.component.html
+++ b/src/app/mood-tracker/mood-tracker.component.html
@@ -3,7 +3,7 @@
     <app-navbar></app-navbar>
 </div>
 
-<nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
+<nav class="navbar navbar-expand-lg sticky-top" style="background-color: #7CA5AF; border-bottom: 3px solid;">
     <div class="container-fluid">
         <a class="navbar-brand fancy-font" style="font-size: 45px;">Mood Tracker</a>
         <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
