current friends display on contacts page, but update time to add a friend to the list once added must be fixed

--- a/src/app/user-profile-contacts/user-profile-contacts.component.html
+++ b/src/app/user-profile-contacts/user-profile-contacts.component.html
@@ -45,7 +45,7 @@
             <div class="" *ngFor="let friend of friendList"  [ngValue]="friend">
                 <label>Friends: </label>
                 <p>
-                    Entry: {{friend}}
+                    {{friend}}
                 </p>
             </div>
         </div>
