--- a/src/app/journal-prompt/journal-prompt.component.html
+++ b/src/app/journal-prompt/journal-prompt.component.html
@@ -35,7 +35,7 @@
                     <div class="col-2"></div>
                     <div class="col-8">
                         <textarea rows="2" class="reg-font text-center" style="margin-top: 50px; font-size: 25px;" readonly>{{title.text}}</textarea>
-                        <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; text-align: center;">July 08, 2020</div>
+                        <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; text-align: center; padding: 2%">{{currentDate}}</div>
                         <div class="form-group" style="align-content: center;">
                             <textarea rows="20" class="notes" formControlName="textEntry" placeholder="Begin entry here..."></textarea>
                             <button [disabled]="loading" class="btn btn-primary">
