--- a/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
+++ b/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
@@ -18,15 +18,17 @@
             <div>
                 <h2 class="article-title">
                     John
+                    <!--*ngFor="let user of data"  [ngValue]="user"   //goes in card container-->
+                    <!-- {{user.firstName}}  -->
                 </h2>
                 <div class="category-title">
                     Data Scientist
+                    <!-- {{user.role}} -->
                 </div>
             </div>
 
             <img src="assets\images\brooke-cagle-Nm70URdtf3c-unsplash.jpg"/>
 
-           
         </header>
         <div class="Bio">
             <div class="profile"></div>
@@ -34,101 +36,13 @@
                 <div class="caption">
                     <p>
                         A little bit about me.....
+                        <!-- {{user.bio}} -->
                     </p>
                 </div>
                 <div class="name">
                     <h6>Hobbies:</h6>
                     <p>Puzzles, Studying Hurricane Patterns, etc...</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <header class="article-header">
-            <div>
-                <h2 class="article-title">
-                    Julie
-                </h2>
-                <div class="category-title">
-                    Data Scientist
-                </div>
-            </div>
-
-            <img src="assets\images\kal-visuals-b1Hg7QI-zcc-unsplash.jpg"/>
-
-           
-        </header>
-        <div class="Bio">
-            <div class="profile"></div>
-            <div class="info">
-                <div class="caption">
-                    <p>
-                        A little bit about me.....
-                    </p>
-                </div>
-                <div class="name">
-                    <h6>Hobbies:</h6>
-                    <p>Puzzles, Studying Hurricane Patterns, etc...</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <header class="article-header">
-            <div>
-                <h2 class="article-title">
-                    Robert
-                </h2>
-                <div class="category-title">
-                    Data Scientist
-                </div>
-            </div>
-
-            <img src="assets\images\foto-sushi-6anudmpILw4-unsplash.jpg"/>
-
-           
-        </header>
-        <div class="Bio">
-            <div class="profile"></div>
-            <div class="info">
-                <div class="caption">
-                    <p>
-                        A little bit about me.....
-                    </p>
-                </div>
-                <div class="name">
-                    <h6>Hobbies:</h6>
-                    <p>Puzzles, Studying Hurricane Patterns, etc...</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <header class="article-header">
-            <div>
-                <h2 class="article-title">
-                    Emily
-                </h2>
-                <div class="category-title">
-                    Data Scientist
-                </div>
-            </div>
-
-            <img src="assets\images\michael-dam-mEZ3PoFGs_k-unsplash.jpg"/>
-
-           
-        </header>
-        <div class="Bio">
-            <div class="profile"></div>
-            <div class="info">
-                <div class="caption">
-                    <p>
-                        A little bit about me.....
-                    </p>
-                </div>
-                <div class="name">
-                    <h6>Hobbies:</h6>
-                    <p>Puzzles, Studying Hurricane Patterns, etc...</p>
+                    <!-- <p>{{user.hobbies}}</p> -->
                 </div>
             </div>
         </div>
