upcoming meetings backend retrieval working

--- a/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
+++ b/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
@@ -17,9 +17,8 @@
         <header class="article-header">
             <div>
                 <h2 class="article-title">
-                    John
-                    <!--*ngFor="let user of data"  [ngValue]="user"   //goes in card container-->
-                    <!-- {{user.firstName}}  -->
+                    John  
+                    <!--{{participants.firstName}}-->
                 </h2>
                 <div class="category-title">
                     Data Scientist
