--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
@@ -106,3 +106,7 @@ html,body{
   }
   
   
+  /*-------------------------Box----------------------*/
+  .boxed {
+    border: 1px solid rgb(95, 48, 10) ;
+  }
