journal modal published

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,7 +24,7 @@
                     </li>
                     <li class="dropdown left-border-div">
                         <a class="nav-link dropdown-toggle type-font hoverable" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="fa fa-user-circle mr-2 mt-1"></span>{{currentUser.firstName}} {{currentUser.lastName}}
+                            <span class="fa fa-user mr-2 mt-1"></span>{{currentUser.firstName}} {{currentUser.lastName}}
                         </a>
                         <ul class="dropdown-menu type-font dropdown-menu-right" aria-labelledby="navbarDropdown">
                             <li class="dropdown-item text-white" style="cursor: pointer;" routerLink="/user-profile">Profile</li>
