--- a/src/app/journal-free-write/journal-free-write.component.html
+++ b/src/app/journal-free-write/journal-free-write.component.html
@@ -38,7 +38,7 @@
                         <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; padding: 2%;">{{currentDate}}</div>
                         <div class="form-group" style="align-content: center;">
                             <textarea rows="20" formControlName="textEntry" class="notes" placeholder="Begin entry here..."></textarea>
-                            <button [disabled]="loading" class="btn btn-primary" routerLink="/journal-published">
+                            <button [disabled]="loading" class="btn btn-primary">
                                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                 Publish
                             </button>
