--- a/src/app/journal-published/journal-published.component.css
+++ b/src/app/journal-published/journal-published.component.css
@@ -13,29 +13,6 @@ p {
     line-height: 1.7em;
     color: #999;
 }
-
-
-
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-}
-
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    margin-bottom: 5px;
-}
-
-
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -46,4 +23,139 @@ ul.CTAs a {
     transition: all 0.3s;
 }
 
-    
+/* ---------------------------------------------------
+    Regular CSS
+----------------------------------------------------- */
+
+.list-group{
+    background-color: ivory;
+    border-color: grey !important;
+}
+.list-group-item{
+    outline: grey !important;
+}
+
+.heading{
+    border-color: grey;
+    background-color: #D8E4E7;
+}
+
+.btn-2{
+    background: unset;
+    border: unset;
+    outline: unset;
+}
+
+.list-group-item:hover .icons {
+	display: block;
+}
+
+.icons {
+	padding-top: 12px;	
+	padding-right: 7px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	display: none;
+}
+
+
+/*-------------------------------------
+Modal CSS
+--------------------------------------*/
+
+.modal,
+.modal-box {
+  z-index: 3000;
+}
+
+.modal-sandbox {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: transparent;
+}
+
+.modal {
+  display: none; 
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgb(0,0,0);
+  background: rgba(0,0,0,.8);
+  overflow: auto;
+  z-index: 3000;
+}
+
+.modal-box {
+  position: relative;
+  width: 80%;
+  max-width: 920px;
+  margin: 100px auto;
+  animation-name: modalbox;
+  animation-duration: .4s;
+  animation-timing-function: cubic-bezier(0,0,.3,1.6);
+}
+
+.modal-header {
+  padding: 20px 40px;
+  background: #7CA5AF;
+  color: #ffffff;
+}
+
+.modal-body {
+  background: whitesmoke;
+  padding: 60px 40px;
+}
+
+/* Close Button */
+.close-modal {
+  text-align: right;
+  cursor: pointer;
+}
+
+/* Animation */
+@-webkit-keyframes modalbox {
+  0% {
+    top: -250px; 
+    opacity: 0;
+  }
+  100% {
+    top: 0; 
+    opacity: 1;
+  }
+}
+
+@keyframes modalbox {
+  0% {
+    top: -250px; 
+    opacity: 0;
+  }
+  100% {
+    top: 0; 
+    opacity: 1;
+  }
+}
+
+.modal-button{
+    border: 2px solid #7CA5AF;
+    background-color: whitesmoke;
+    color: #7CA5AF;
+    padding: 10px 24px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.modal-button:hover{
+    background-color:#7CA5AF;
+    color: white; 
+}
+
+
+
+
