--- a/src/app/journal/journal.component.html
+++ b/src/app/journal/journal.component.html
@@ -28,28 +28,27 @@
 
     <div class="journal container-fluid" id="content">
         <div class="row">
-            <div class="col-1"></div>
-            <div class="col-4">
-                <!--Button-->
-                <div class="box-1">
-                    <div class="btn btn-one">
-                    <span>Free Write</span>
-                    </div>
-                </div>
+            <div class="col-2"></div>
+                <!--Button 1-->
+                <div class="col-3 bkrd">
+                <button class="button" href="/journal-free-write" routerLink="/journal-free-write">
+                    Free Writing Entry
+                    <div class="button__horizontal"></div>
+                    <div class="button__vertical"></div>
+                </button>
             </div>
             <div class="col-2"></div>
-            <div class="col-4">
-                <!--Button-->
-                <div class="box-1">
-                    <div class="btn btn-one">
-                    <span>Respond to a Prompt</span>
-                    </div>
-                </div>
+            <!--Button 2-->
+            <div class="col-3 bkrd">
+            <button class="button" href="/journal-prompt" routerLink="/journal-prompt">
+                Respond to a Prompt
+                <div class="button__horizontal"></div>
+                <div class="button__vertical"></div>
+            </button>
             </div>
-            <div class="col-1"></div>
+            <div class="col-2"></div>
         </div>
-    </div>    
-
+    </div>   
     
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
