--- a/src/app/coffee-chat-navbar/coffee-chat-navbar.component.css
+++ b/src/app/coffee-chat-navbar/coffee-chat-navbar.component.css
@@ -1,5 +1,5 @@
 .dropdown-menu{
-    background-color: #fae5cc !important;
+    background-color: #CD9D8E !important;
     width: fit-content !important;
     border: none !important;
     top: 45px !important;
@@ -7,7 +7,7 @@
 
 .dropdown-item:hover{
     cursor: pointer;
-    background-color: #ffe5ad ;
+    background-color: #e9c7bc ;
 }
 .text-grey{
     color: rgb(97, 96, 96) !important;
