--- a/src/app/journal/journal.component.css
+++ b/src/app/journal/journal.component.css
@@ -1,41 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
 
-body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
-}
-
-p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
-}
-
-
-
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-}
-
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    margin-bottom: 5px;
-}
-
-
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -50,16 +15,16 @@ ul.CTAs a {
     BUTTON STYLE
 ----------------------------------------------------- */
 .row{
-    padding-top: 8% !important;
-    padding-bottom: 15%;
+    padding-top: 2% !important;
+    padding-bottom: 2%;
+    height: 100%;
+
 } 
 
 .bkrd{
     background-color: #d8e4e7;
-    height: 25%;
-    width: 25%;
-    padding: 0;
-    margin: 0;
+    max-width: 600px !important;
+    max-height: 300px !important;
 
 }
 
@@ -70,7 +35,7 @@ ul.CTAs a {
     
     display: inline-block;
     position: relative;
-    padding: 10% 22%;
+    padding: 7% 28%;
     appearance: none;
     border: 0;
     background: transparent;
@@ -84,7 +49,9 @@ ul.CTAs a {
     box-shadow: inset 0 0 0 var(--border-size) currentcolor;
     transition: background 0.8s ease;
     font-family: 'Montserrat';
-    margin: 5%;
+    margin: 3% 1%;
+    max-width: 600px;
+    max-height: 300px;
 
 
 }
@@ -133,3 +100,32 @@ ul.CTAs a {
 .button:hover .button__vertical {
     transform: scaleY(0);
 }
+
+
+
+
+.card {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.2s ease-in-out;
+    box-sizing: border-box;
+    margin-top:10px;
+    margin-bottom:10px;
+    background-color:#FFF;
+  }
+  
+  .card:hover {
+    box-shadow: 0 5px 5px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  }
+  .card > .card-inner {
+    padding:10px;
+  }
+  .card .header h2, h3 {
+    margin-bottom: 0px;
+    margin-top:0px;
+  }
+  .card .header {
+    margin-bottom:5px;
+  }
+  .card img{
+    width:100%;
+  }
