--- a/src/app/journal/journal.component.html
+++ b/src/app/journal/journal.component.html
@@ -28,25 +28,28 @@
 
     <div class="journal container-fluid" id="content">
         <div class="row">
-            <div class="col-2"></div>
+            <div class="col-3"></div>
                 <!--Button 1-->
-                <div class="col-3 bkrd">
+                <div class="col-6 bkrd">
                 <button class="button" href="/journal-free-write" routerLink="/journal-free-write">
                     Free Writing Entry
                     <div class="button__horizontal"></div>
                     <div class="button__vertical"></div>
                 </button>
             </div>
-            <div class="col-2"></div>
+            <div class="col-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
             <!--Button 2-->
-            <div class="col-3 bkrd">
+            <div class="col-6 bkrd">
             <button class="button" href="/journal-prompt" routerLink="/journal-prompt">
                 Respond to a Prompt
                 <div class="button__horizontal"></div>
                 <div class="button__vertical"></div>
             </button>
             </div>
-            <div class="col-2"></div>
+            <div class="col-3"></div>
         </div>
     </div>   
 
