--- a/src/app/journal-prompt/journal-prompt.component.css
+++ b/src/app/journal-prompt/journal-prompt.component.css
@@ -74,7 +74,7 @@ textarea:hover {
 
 .buttons{
     border: 2px solid #7CA5AF;
-    background-color: #ced4da;
+    background-color: whitesmoke;
     color: #7CA5AF;
     height: 75%;
     width: 90%;
