--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -25,91 +25,141 @@
 
 <body>
 
-        <!-- Page Content Holder -->
-        <div id="content">
-    
-            <h3>Pending Meetings</h3>
-            <div class = "hostMeetings">
+        <!--Meetings I Scheduled-->
+        <div class="coffee-chat" id="content">
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-auto">
-                        <h5>Meetings I Scheduled...</h5>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-md-auto">
-                        <div class="row justify-content-between">
-                            <div class="col-8 col-sm-4">
-                                Saturday, May 14
+                <div class="col-6">
+                    <div id="accordian">
+                        <h2 class="type-font text-center mt-3" style="color: white;">Meetings I Scheduled</h2>
+                        <!--card 1-->
+                        <div class="card">
+                        <div class="card-title justify-content-end reg-font m-3">
+                            <a style="font-size: 18px; font-weight: 600;">Saturday, May 14</a>
+                            <a style="font-size: 18px;">8:00 AM</a>
+                            <button class="btn-2 collapsed justify-content-end" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse">
+                                <a style="font-size: 15px;">3 Atendees </a><span class="fa fa-chevron-down fa-sm"></span>
+                            </button>
+                        </div>
+                        
+                            <div class="card-body collapse" id="collapse1">
+                            <hr class="divide" style="color: grey" />
+                            <div class="card-text ml-3 mr-3">
+                                <div class="row justify-content-end">
+                                    <a class="p-1 flex-grow-1 reg-font"> Emily</a>
+                                    <a class="p-1 reg-font"> Pending</a>
+                                </div>
+                                <div class="row justify-content-end">
+                                    <a class="p-1 flex-grow-1 reg-font"> Shannon</a>
+                                    <a class="p-1 reg-font"> Pending</a>
+                                </div>
+                                <div class="row justify-content-end">
+                                    <a class="p-1 flex-grow-1 reg-font"> Katie</a>
+                                    <a class="p-1 reg-font"> Accepted</a>
+                                </div>
+                                <div class="row justify-content-center">
+                                    <button class="button" routerLink="/coffee-chat-profiles">View Participant Profiles</button>
+                                </div>
                             </div>
-                            <div class="col-8 col-sm-4">
-                                8:00 AM
-                            </div>
-                            <div class="col-8 col-sm-4">
-                                3 Attendees <!--Pull sum of attendees-->
                             </div>
                         </div>
-                        <div class="row justify-content-between">
-                            <div class="col-8 col-sm-4">
-                                Emily
-                            </div>
 
-                            <div class="col-8 col-sm-4">
-                                Pending
+                        <!--Card 2-->
+                        <div class="card">
+                            <div class="card-title justify-content-end reg-font m-3">
+                                <a style="font-size: 18px; font-weight: 600;">Monday, May 16</a>
+                                <a style="font-size: 18px;">2:00 PM</a>
+                                <button class="btn-2 collapsed justify-content-end" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse">
+                                    <a style="font-size: 15px;">3 Atendees </a><span class="fa fa-chevron-down fa-sm"></span>
+                                </button>
+                            </div>
+                            
+                                <div class="card-body collapse" id="collapse3">
+                                <hr class="divide" style="color: grey" />
+                                <div class="card-text ml-3 mr-3">
+                                    <div class="row justify-content-end">
+                                        <a class="p-1 flex-grow-1 reg-font"> Emily</a>
+                                        <a class="p-1 reg-font"> Accepted</a>
+                                    </div>
+                                    <div class="row justify-content-end">
+                                        <a class="p-1 flex-grow-1 reg-font"> Shannon</a>
+                                        <a class="p-1 reg-font"> Accepted</a>
+                                    </div>
+                                    <div class="row justify-content-end">
+                                        <a class="p-1 flex-grow-1 reg-font"> Katie</a>
+                                        <a class="p-1 reg-font"> Pending</a>
+                                    </div>
+                                    <div class="row justify-content-center">
+                                        <button class="button" routerLink="/coffee-chat-profiles">View Participant Profiles</button>
+                                    </div>
+                                </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="row justify-content-between">
-                            <div class="col-8 col-sm-4">
-                                Shannon
-                            </div>
-                            <div class="col-8 col-sm-4">
-                                Pending
-                            </div>
-                        </div>
-                        <div class="row justify-content-between">
-                            <div class="col-8 col-sm-4">
-                                Katie
-                            </div>
-                            <div class="col-8 col-sm-4">
-                                Accepted
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <p>
-                    </p>
                 </div>
 
-                
-                <div class="row">
-                    <div class="col-md-auto">
-                        <h5>Meetings Scheduled with Me...</h5>
-                    </div>
-                </div>
+                <!--Meetings Schedules With ME-->
+                <div class="col-6">
+                        <h2 class="type-font text-center mt-3" style="color: white;">Meetings Scheduled with Me</h2>
+                        <!--card 1-->
+                        <div class="card">
+                        <div class="card-title justify-content-end reg-font m-3">
+                            <a style=" font-size: 18px; font-weight: 600;">Saturday, May 14</a>
+                            <a style=" font-size: 18px;">8:00 AM</a>
+                        </div>
+                        <div class="card-body mt-0">
+                            <hr class="divide mt-0 mb-2" />
+                            <div class="card-text ml-3 mr-3">
+                                <div class="row justify-content-end">
+                                    <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 600;"> Host:</a>
+                                    <a class="p-1 reg-font"> Shannon</a>
+                                </div>
+                                <div class="row justify-content-end">
+                                    <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 600;">5 Attendees:</a>
+                                    <a class="link" routerLink="/coffee-chat-profiles">View Participant Profiles</a>
+                                </div>
+                                <div class="row justify-content-center mt-3">
+                                    <button class="accept-button mr-1" routerLink="/coffee-chat-profiles">Accept</button>
+                                    <button class="decline-button ml-1" routerLink="/coffee-chat-profiles">Decline</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
 
-                <div class="row justify-content-between">
-                    <div class="col-8 col-sm-4">
-                        Sunday, May 15
-                    </div>
-                    <div class="col-8 col-sm-4">
-                        2:15 PM
-                    </div>
-                    <div class="col-8 col-sm-4">
-                        <button style="margin-right:10px">
-                            Accept
-                        </button>
-                        <button>
-                            Reject
-                        </button>
-                    </div>
+                        <!--card 2-->
+                        <div class="card mt-4">
+                            <div class="card-title justify-content-end reg-font m-3">
+                                <a style=" font-size: 18px; font-weight: 600;">Wednesday, May 18</a>
+                                <a style=" font-size: 18px;">12:00 PM</a>
+                            </div>
+                            <div class="card-body mt-0">
+                                <hr class="divide mt-0 mb-2" />
+                                <div class="card-text ml-3 mr-3">
+                                    <div class="row justify-content-end">
+                                        <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 600;"> Host:</a>
+                                        <a class="p-1 reg-font"> Shannon</a>
+                                    </div>
+                                    <div class="row justify-content-end">
+                                        <a class="p-1 flex-grow-1 left reg-font" style="font-weight: 600;">3 Attendees:</a>
+                                        <a class="link" routerLink="/coffee-chat-profiles">View Participant Profiles</a>
+                                    </div>
+                                    <div class="row justify-content-center mt-3">
+                                        <button class="accept-button mr-1" routerLink="/coffee-chat-profiles">Accept</button>
+                                        <button class="decline-button ml-1" routerLink="/coffee-chat-profiles">Decline</button>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                </div>
                 </div>
             </div>
-         
+        </div>
+
             
 
 
 
-        </div>
+        
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
